# claude-metrics

./: .gitignore  GRAFANA_SETUP.md  PLAN.md  README.md  claude-metrics  pyproject.toml
commands/: README.md  claude_mcp.sh  claude_start.sh  coverage.sh  loc.sh  loc_simple.sh  run_lint.sh  run_tests_with_coverage.sh
src/claude_metrics/: __init__.py  cli.py  config.py  exporters.py  patterns.py  scanner.py  storage.py
